Bug 105246 - libinput command can't find its subcommand --parameters
Summary: libinput command can't find its subcommand --parameters
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-26 02:37 UTC by Daniel van Vugt
Modified: 2018-02-26 04:04 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Daniel van Vugt 2018-02-26 02:37:11 UTC
libinput command can't find its subcommand --parameters

FAILS:

$ sudo libinput measure touch-size --touch-thresholds 2:1
libinput-measure: unrecognized option '--touch-thresholds'
Usage: libinput measure [--help] <feature> [/dev/input/event0]

$ sudo libinput measure --touch-thresholds 2:1 touch-size
libinput-measure: unrecognized option '--touch-thresholds'
Usage: libinput measure [--help] <feature> [/dev/input/event0]

$ sudo libinput --touch-thresholds 2:1 measure touch-size
libinput: unrecognized option '--touch-thresholds'
...

WORKS:

$ sudo /usr/lib/x86_64-linux-gnu/libinput/libinput-measure-touch-size --touch-thresholds 2:1
Comment 1 Peter Hutterer 2018-02-26 03:55:14 UTC
oh, whoops. Now it all makes sense :) thanks!

commit 59550ed21cce9df18077bbadd81e87f93fa53dda
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Feb 26 13:50:17 2018 +1000

    tools: fix option parsing in libinput measure


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.